# skretrieval

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  env.yml  license.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  planned-feature.md
.github/workflows/: build.yml  nightly.yml  release.yml  test.yml
ci/conda-envs/: dev_env.yml  doc_env.yml  mamba-build.yml  test.yml
conda.recipe/: meta.yaml
docs/source/: api_reference.md  changelog.md  conf.py  forwardmodel.rst  index.md  index.rst  installation.md  quickstart.md  retrieval.rst  users_guide.md
docs/source/api/: forward_model.md  lineshape.md  measurement_vector.md  minimizer.md  modules.rst  observation.md  prior.md  processing.md  skretrieval.core.platform.rst  skretrieval.core.rst  skretrieval.core.sensor.rst  skretrieval.retrieval.rst  skretrieval.rst  skretrieval.tomography.rst  state_vector.md
docs/source/concepts/: forward_model.md  main.md  measurement_vector.md  observation.md  processing.md  state_vector.md
docs/source/examples/: cloud.md  limb_aerosol.md  limb_ozone.md  limb_polarized_aerosol.md  main.md  nadir_ozone.md  synergy.md
docs/source/lib/: lineshape.md  main.md  minimizer.md
docs/source/tomography/: introduction.rst  orbitalgrid.rst  radtran.rst  retrievaltarget.rst
docs/source/users_guide/: forward_model.md  observation.md  state_vector.md
src/: main.cpp
src/skretrieval/: __init__.py  _version.py  util.py
src/skretrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/skretrieval/apriori/: tikhonov.py
src/skretrieval/core/: __init__.py  lineshape.py  radianceformat.py  sasktranformat.py  simulator.py
src/skretrieval/core/platform/: balloon.py  satellite.py
src/skretrieval/core/sensor/: __init__.py  imager.py  pixel.py  spectrograph.py
src/skretrieval/doas/: __init__.py
src/skretrieval/geodetic/: __init__.py
src/skretrieval/inversion/: rodgers.py
src/skretrieval/legacy/: util.py
src/skretrieval/legacy/core/: simulator.py
src/skretrieval/legacy/core/sensor/: imager.py  pixel.py  spectrograph.py
src/skretrieval/legacy/retrieval/statevector/: aerosol.py  profile.py
src/skretrieval/legacy/sasktran_ext/: opticalproperty.py
src/skretrieval/legacy/tomography/: grids.py  target.py
src/skretrieval/legacy/tomography/sasktran_ext/: climatology.py  engine.py
src/skretrieval/plotting/: __init__.py
src/skretrieval/retrieval/: __init__.py  airdensity.py  ancillary.py  erroranalysis.py  forwardmodel.py  observation.py  ozone.py  prior.py  processing.py  rodgers.py  scipy.py  target.py  tikhonov.py
src/skretrieval/retrieval/measvec/: __init__.py
src/skretrieval/retrieval/statevector/: __init__.py  aerosol.py  altitude.py  constituent.py  profile.py  shift.py  shifts.py  spline.py
src/skretrieval/retrieval/usarm/: __init__.py  ancillary.py  forwardmodel.py  measvec.py  observation.py  processing.py  statevector.py  target.py
src/skretrieval/retrieval/usarm/measvec/: __init__.py
src/skretrieval/sasktran_ext/: opticalproperty.py
src/skretrieval/time/: __init__.py  datetime64.py  eci.py  juliandate.py  mjd.py
src/skretrieval/tomography/: grids.py  target.py
src/skretrieval/tomography/sasktran_ext/: climatology.py  engine.py  opticalproperty.py
tests/: test_integration_spectrograph.py  test_main.py  test_meas_simulator.py  test_plotting.py  test_retrieval.py  test_spectrograph.py
tests/core/: test_sasktran_format.py
tests/core/sensor/: test_spectrograph.py
tests/legacy/: test_geometry_conversion.py  test_integration_spectrograph.py  test_legacy_spectrograph.py  test_meas_simulator.py  test_retrieval.py
tests/legacy/sensor/: test_pixel.py
tests/retrieval/: test_error_estimates.py  test_full.py
tests/retrieval/measvec/: test_measvec.py
tests/retrieval/prior/: test_prior.py
tests/retrieval/statevector/: test_statevector_constituent.py
tests/sensor/: test_pixel.py
tests/usarm/: test_full.py  test_measvec.py  test_prior.py
